tests/negative/neg_rule2_off_by_one.safe
-- Test: neg_rule2_off_by_one
-- Description: Off-by-one error accessing beyond the last element.
--   The loop iterates one position past the array's upper bound.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p131:30aba5f5
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p132:8613ecf4
-- Expected: REJECT index_out_of_bounds

package off_by_one_test

   type idx is range 1 to 10;
   type data is array (idx) of integer;

   --  Sum_Plus_One: iterates from 1 to 11, but array only goes to 10.
   function sum_plus_one (arr : data) returns integer
      total : integer = 0;

      for i in 1 to 11
         total = total + arr (idx (i));  -- ERROR: I = 11 is out of bounds

      return total;

